# veselinovanegex

./: .zenodo.json  CONTRIBUTORS.md  README.md  cldfbench_veselinovanegex.py  languages.geojson  metadata.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
cldf/: README.md  StructureDataset-metadata.json  codes.csv  languages.csv  parameters.csv  requirements.txt  sources.bib  values.csv
etc/: codes.csv  languages.csv  parameters.csv
raw/: NegEx_CLDF.NegExCLLD.csv  NegEx_CLDF.csv  NegEx_CLDF.xlsx  NegEx_bib.txt  README.md
