[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cldfbench_veselinovanegex"
dependencies = ["cldfbench[glottolog]"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest-cldf"]

[project.entry-points."cldfbench.dataset"]
veselinovanegex = "cldfbench_veselinovanegex:Dataset"

[tool.setuptools]
py-modules = ["cldfbench_veselinovanegex"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["test.py"]
addopts = "--cldf-metadata=cldf/StructureDataset-metadata.json"
